--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Formacion gratuitapara crear el sistema de ventas automatizado para tu negocio con el que conseguirás clientes nuevos todos los días sin malgastar tu tiempo y tu dinero" />
     <meta property="og:image" content="https://github.com/Gio-Moreno/masterclass-sitio-web/blob/main/assets/imgs/laptop.png?raw=true" />
     
-    <link rel="icon" href="./assets/imgs/laptop.png" type="image/png" />
+    <link rel="icon" href="./assets/imgs/favicon-retomaster.png" type="image/png" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <!-- font awesome 5 free -->
