--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="taller de marketing digital en bucaramanga, marketing digital en bucaramanga, workshop de marketing digital, marketing digital, microempresa, crear empresa, personal training, apoyo empresarial, registro, comercio en línea, redes sociales, instagram, facebook, youtube, tik tok, taller de marketing digital, taller gratis">
     <meta name="author" content="Gio Moreno Marketing Digital - Giovanny Moreno" />
     <meta name="dcterms.rightsHolder" content="Gio Moreno Marketing Digital" />
-    <meta property="og:title" content="Master Class Sistemas de ventas automatizadas" />
+    <meta property="og:title" content="Conoce el método para diseñar y ejecutar el sistema de ventas con el que podrás encontrar clientes de manera automática las 24 horas del día para tu negocio" />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="635642317379294" />
     <meta property="og:url" content="https://master-digital.github.io/reto-master/" />
