--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta name="keywords" content="taller de marketing digital en bucaramanga, marketing digital en bucaramanga, workshop de marketing digital, marketing digital, microempresa, crear empresa, personal training, apoyo empresarial, registro, comercio en línea, redes sociales, instagram, facebook, youtube, tik tok, taller de marketing digital, taller gratis">
     <meta name="author" content="Gio Moreno Marketing Digital - Giovanny Moreno" />
     <meta name="dcterms.rightsHolder" content="Gio Moreno Marketing Digital" />
-    <meta property="og:title" content="Conoce el método para diseñar y ejecutar el sistema de ventas con el que podrás encontrar clientes de manera automática las 24 horas del día para tu negocio" />
+    <meta property="og:title" content="Regístrate en el Reto Master - Junio 26 al 30 de 2023" />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="635642317379294" />
     <meta property="og:url" content="https://master-digital.github.io/reto-master/" />
-    <meta property="og:description" content="Formacion gratuitapara crear el sistema de ventas automatizado para tu negocio con el que conseguirás clientes nuevos todos los días sin malgastar tu tiempo y tu dinero" />
+    <meta property="og:description" content="Conoce el método para diseñar y ejecutar el sistema de ventas con el que podrás encontrar clientes de manera automática las 24 horas del día para tu negocio" />
     <meta property="og:image" content="https://github.com/master-digital/reto-master/blob/main/assets/imgs/portada-video-reto-master.png?raw=true" />
     
     <link rel="icon" href="./assets/imgs/favicon-retomaster.png" type="image/png" />
