--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           Te enseñaré los recursos estratégicos, técnicos y psicológicos que usan miles de profesionales en el mundo del marketing todos los días para posicionar marcas y negocios multimillonarios en en internet.
         </p>
         <div class="w-100 my-5">
-          <a href="#mailer-form" class="px-2 py-2 text-dark mt-5 shadow-sm"   style="font-size: 24px; background-color: #C6FF3C; font-weight: 600; border-radius: 20px;">¡QUIERO ENTRAR AL RETO YA!</a>
+          <a href="#mailer-form" class="px-2 py-2 text-dark mt-5 shadow-sm"   style="font-size: 24px; background-color: #C6FF3C; font-weight: 600; border-radius: 20px;">¡QUIERO ENTRAR AL RETO!</a>
         </div>
       </div>
       <div class="col-lg-6">
