--- a/lista-espera.html
+++ b/lista-espera.html
@@ -98,10 +98,10 @@
           <br>👇 👇 👇
         </h4>
         <div id="mailer-form" class="border border-light rounded py-3 mt-5" style="background-color: black;">
-          <div class="ml-form-embed "
+          <div class="ml-form-embed"
             data-account="2270023:n9p2z0h9s6"
-            data-form="3062510:d7i1p6">
-          </div>  
+            data-form="5969383:k3v1m2">
+          </div> 
         </div>
         <img class="" style="width: 100px;" src="assets/imgs/logoMasterDigital.png" alt="">
     </div>
