--- a/sistema-de-ventas-clases-gratis/clase1-embudo-de-ventas.html
+++ b/sistema-de-ventas-clases-gratis/clase1-embudo-de-ventas.html
@@ -102,7 +102,7 @@
             El sistema de marketing que todos los negocios con resultados extraordinarios utilizan dentro de su estrategia digital
           </h4>
           <div class="position-relative mx-auto">
-            <video autoplay loop playsinline class="wide-video" src="../assets/imgs/portadaVideo-clases-gratis.mp4" alt=""></video>
+            <iframe class="wide-video"  src="https://www.youtube.com/embed/Kp0RVKG_PLk?si=F8TwTxh_pi2cS8my" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <div class="row mt-3">
             <div class="col-6 float-start"><button class="btn btn-block disabled btn-muted  text-light shadow">SALIR</button></div>
