--- a/sistema-de-ventas-clases-gratis/clase2-oferta-de-valor.html
+++ b/sistema-de-ventas-clases-gratis/clase2-oferta-de-valor.html
@@ -102,7 +102,7 @@
             Cómo crear una Oferta de valor poderosa que me ayude a conectar a nivel profundo con mis prospectos para lograr llamar su atención
           </h4>
           <div class="position-relative mx-auto">
-            <video autoplay loop playsinline class="wide-video" src="../assets/imgs/portadaVideo-clases-gratis.mp4" alt=""></video>
+            <iframe class="wide-video" src="https://www.youtube.com/embed/UbKP-OoJwng?si=jlRxXSIhtRHkjcls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <div class="row mt-3">
             <div class="col-6 float-start"><a href="clase1-embudo-de-ventas.html"><button class="btn btn-block btn-dark shadow text-light font-weight-bold"><i class="fa fa-backward text-danger font-weight-bolder"></i> CLASE 1</button></a></div>
