--- a/sistema-de-ventas-clases-gratis/clase1-embudo-de-ventas.html
+++ b/sistema-de-ventas-clases-gratis/clase1-embudo-de-ventas.html
@@ -106,7 +106,7 @@
           </div>
           <div class="row mt-3">
             <div class="col-6 float-start"><button class="btn btn-block disabled btn-muted  text-light shadow">SALIR</button></div>
-            <div class="col-6 float-end"><a href="clase2-oferta-de-valor.html"><button class="btn btn-block btn-primary shadow text-dark font-weight-bold">CLASE 2 <i class="fa fa-forward text-danger font-weight-bolder"></i></button></a></div>
+            <div class="col-6 float-end"><a href="clase2-oferta-de-valor?from=class1"><button class="btn btn-block btn-primary shadow text-dark font-weight-bold">CLASE 2 <i class="fa fa-forward text-danger font-weight-bolder"></i></button></a></div>
           </div>
         </div>
         <div  class=" mt-lg-0 mx-0 ">
