--- a/sistema-de-ventas-clases-gratis/clase2-oferta-de-valor.html
+++ b/sistema-de-ventas-clases-gratis/clase2-oferta-de-valor.html
@@ -105,8 +105,8 @@
             <iframe class="wide-video" src="https://www.youtube.com/embed/UbKP-OoJwng?si=jlRxXSIhtRHkjcls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <div class="row mt-3">
-            <div class="col-6 float-start"><a href="clase1-embudo-de-ventas.html"><button class="btn btn-block btn-dark shadow text-light font-weight-bold"><i class="fa fa-backward text-danger font-weight-bolder"></i> CLASE 1</button></a></div>
-            <div class="col-6 float-end"><a href="clase3-promocion-y-publicidad.html"><button class="btn btn-block btn-primary shadow text-dark font-weight-bold">CLASE 3 <i class="fa fa-forward text-danger font-weight-bolder"></i></button></a></div>
+            <div class="col-6 float-start"><a href="clase1-embudo-de-ventas?from=class1"><button class="btn btn-block btn-dark shadow text-light font-weight-bold"><i class="fa fa-backward text-danger font-weight-bolder"></i> CLASE 1</button></a></div>
+            <div class="col-6 float-end"><a href="clase3-promocion-y-publicidad?from=class2"><button class="btn btn-block btn-primary shadow text-dark font-weight-bold">CLASE 3 <i class="fa fa-forward text-danger font-weight-bolder"></i></button></a></div>
           </div>
         </div>
         <div  class=" mt-lg-0 mx-0 ">
