--- a/sistema-de-ventas-clases-gratis/index.html
+++ b/sistema-de-ventas-clases-gratis/index.html
@@ -103,7 +103,7 @@
           
           <div class="wide-video position-relative mx-auto">
             <button onclick="ml_account('webforms', '5969274', 'n2u5f3', 'show')" class="position-absolute start-50 translate-middle" style="z-index: 1;"><img src="../assets/imgs/botonVideo.png" style="width: 100%;" alt=""></button>
-            <video autoplay loop class="w-100" src="../assets/imgs/portadaVideo-clases-gratis.mp4" alt=""></video>
+            <video autoplay loop class="wide-video" src="../assets/imgs/portadaVideo-clases-gratis.mp4" alt=""></video>
           </div> 
         </div>
         <div  class=" mt-lg-0 mx-0 ">
