--- a/reto-master/index.html
+++ b/reto-master/index.html
@@ -277,7 +277,7 @@
 
     // Comparación de fechas
     if (fechaActual > fechaMasters) {
-      window.location.href = '../lista-espera.html';
+      window.location.href = '../lista-espera';
     }
   </script>
 
