--- a/payment-methods.html
+++ b/payment-methods.html
@@ -42,7 +42,7 @@
   
 </head>
 
-  <body class="" style="background-color: #EDEDED;">
+  <body class="" >
     
 
     
@@ -52,8 +52,7 @@
       <div class="container pb-3 pt-5">
         <div class="mx-auto" >
           <div class="text-white text-center">
-            <img src="/img/zokakids-favicon.png" alt="Zoka Kids" class="">
-            <h3 class="text-primary-morado">Soka Kids</h3>
+            <h3 class="text-primary-morado">Selecciona tu forma de pago</h3>
           </div>
           <div>
             <h2 class="text-center">Elige tu método de pago</h2>
