--- a/payment-methods.html
+++ b/payment-methods.html
@@ -42,7 +42,7 @@
   
 </head>
 
-  <body class="" >
+  <body class="" style="background-color: #EDEDED;">
     
 
     
@@ -60,7 +60,7 @@
 
           <div class="mt-5 ">
             <div class="container text-center">
-              <a class="text-center offer" href="https://www.mercadopago.com.co/subscriptions/checkout?preapproval_plan_id=2c9380848a921a7e018a9406f65c00ab">
+              <a class="text-center offer" href="https://mpago.li/1Ab719w">
                 <h4><span class="font-weight-bold" style="font-size: 18px;">TARJETA CRÉDITO Y DÉBITO</span><br></h4>
                 <h4 class="py-3 px-3 shadow font-weight-light" style="background-color:  rgb(255, 255, 255); border-bottom: solid 5px rgb(136, 136, 136); border-radius: 10px;">
                   <img class="w-100" src="img/mercadopago.svg" alt="" style="max-width: 200px;">
