--- a/payment-methods.html
+++ b/payment-methods.html
@@ -51,9 +51,6 @@
     <div class="container-fluid shadow">
       <div class="container pb-3 pt-5">
         <div class="mx-auto" >
-          <div class="text-white text-center">
-            <h3 class="text-primary-morado">Selecciona tu forma de pago</h3>
-          </div>
           <div>
             <h2 class="text-center">Elige tu método de pago</h2>
           </div>
@@ -98,7 +95,7 @@
     <div class="container-fluid bg-light  py-5 px-sm-3 px-md-5 mx-auto">
       
       <div class="container-fluid" >
-        <p class="m-0 text-center text-primary-morado">&copy; <a class="text-primary-morado font-weight-bold" href="https://zokakids.com">Soka Kids</a> Todos los derechos reservados. Diseñado por <a class="text-warning font-weight-bold" href="https://zokakids.com" >Gio Moreno</a>
+        <p class="m-0 text-center text-primary-morado">&copy; <a class="text-primary-morado font-weight-bold" href="https://zokakids.com">Master Club</a> Todos los derechos reservados. Diseñado por <a class="text-warning font-weight-bold" href="https://zokakids.com" >Gio Moreno</a>
           
         </p>
       </div>
