--- a/payment-methods.html
+++ b/payment-methods.html
@@ -52,7 +52,7 @@
       <div class="container pb-3 pt-5">
         <div class="mx-auto" >
           <div>
-            <h2 class="text-center">Elige tu método de pago</h2>
+            <h2 class="text-center text-dark">Elige tu método de pago</h2>
           </div>
 
           <div class="mt-5 ">
@@ -77,7 +77,7 @@
                 </h4>
               </a>
                -->
-              <h6 class="mb-5"><i class="fas fa-regular fa-credit-card"></i> Pago seguro con tarjeta de crédito y débito</h6>
+              <h6 class="mb-5 text-dark"><i class="fas fa-regular fa-credit-card"></i> Pago seguro con tarjeta de crédito y débito</h6>
             </div>
             <div class="text-center">
               <img class="w-100" src="img/paymentsMethods.webp" alt="" style="max-width: 600px;">
