--- a/payment-methods.html
+++ b/payment-methods.html
@@ -60,28 +60,28 @@
               <a class="text-center offer" href="https://mpago.li/1Ab719w">
                 <h4><span class="font-weight-bold" style="font-size: 18px;">TARJETA CRÉDITO Y DÉBITO</span><br></h4>
                 <h4 class="py-3 px-3 shadow font-weight-light" style="background-color:  rgb(255, 255, 255); border-bottom: solid 5px rgb(136, 136, 136); border-radius: 10px;">
-                  <img class="w-100" src="img/mercadopago.svg" alt="" style="max-width: 200px;">
+                  <img class="w-100" src="assets/img/mercadopago.svg" alt="" style="max-width: 200px;">
                 </h4>
               </a>
               <a class="text-center offer" href="https://api.whatsapp.com/send/?phone=573017501951&text=Hola+Aleja,+quiero+hacer+el+pago+de+Leadership+por+transferencia.">
                 <h4>
                   <span class="font-weight-bold" style="font-size: 18px;">TRANSFERENCIA BANCARIA</span><br></h4>
                 <h4 class="py-3 px-3 shadow font-weight-light" style="background-color:  rgb(255, 255, 255); border-bottom: solid 5px rgb(136, 136, 136); border-radius: 10px;">
-                  <img class="w-100" src="img/transferencia.svg" alt="" style="max-width: 400px;">
+                  <img class="w-100" src="assets/img/transferencia.svg" alt="" style="max-width: 400px;">
                 </h4>
               </a>
               <!-- <a class="text-center offer" href="https://share.hsforms.com/1xFxsMu7fSrKe3-m4Mpo3MAe5z08">
                 <h4 class="py-3 px-3 shadow font-weight-light" style="background-color:  rgb(255, 255, 255); border-bottom: solid 5px rgb(136, 136, 136); border-radius: 10px;">
                   <span class="font-weight-bold" style="font-size: 18px;">TARJETA CRÉDITO Y DÉBITO</span><br>
-                  <img class="w-100" src="img/paypal.png" alt="" style="max-width: 200px;">
+                  <img class="w-100" src="assets/img/paypal.png" alt="" style="max-width: 200px;">
                 </h4>
               </a>
                -->
               <h6 class="mb-5 text-dark"><i class="fas fa-regular fa-credit-card"></i> Pago seguro con tarjeta de crédito y débito</h6>
             </div>
             <div class="text-center">
-              <img class="w-100" src="img/paymentsMethods.webp" alt="" style="max-width: 600px;">
-              <img class="w-100 my-3" src="img/paymentGuaranty.webp" alt="" style="max-width: 300px;">
+              <img class="w-100" src="assets/img/paymentsMethods.webp" alt="" style="max-width: 600px;">
+              <img class="w-100 my-3" src="assets/img/paymentGuaranty.webp" alt="" style="max-width: 300px;">
             </div>
           </div>
         </div>
