--- a/payment-methods.html
+++ b/payment-methods.html
@@ -60,7 +60,7 @@
               <a class="text-center offer" href="https://mpago.li/1Ab719w">
                 <h4><span class="font-weight-bold" style="font-size: 18px;">TARJETA CRÉDITO Y DÉBITO</span><br></h4>
                 <h4 class="py-3 px-3 shadow font-weight-light" style="background-color:  rgb(255, 255, 255); border-bottom: solid 5px rgb(136, 136, 136); border-radius: 10px;">
-                  <img class="w-100" src="assets/img/mercadopago.svg" alt="" style="max-width: 200px;">
+                  <img class="w-100" src="assets/imgs/mercadopago.svg" alt="" style="max-width: 200px;">
                 </h4>
                 <h6 class="mb-5 text-dark"><i class="fas fa-regular fa-credit-card"></i> Pago seguro con tarjeta de crédito y débito</h6>
               </a>
