--- a/payment-methods.html
+++ b/payment-methods.html
@@ -64,7 +64,7 @@
                 </h4>
                 <h6 class="mb-5 text-dark"><i class="fas fa-regular fa-credit-card"></i> Pago seguro con tarjeta de crédito y débito</h6>
               </a>
-              <a class="text-center offer" href="https://api.whatsapp.com/send/?phone=573017501951&text=Hola+Aleja,+quiero+hacer+el+pago+de+Leadership+por+transferencia.">
+              <a class="text-center offer" href="https://api.whatsapp.com/send/?phone=573132047407&text=Hola+Gio,+quiero+hacer+el+pago+del+Workshop+de+Canva+por+transferencia+a....">
                 <h4>
                   <span class="font-weight-bold" style="font-size: 18px;">TRANSFERENCIA BANCARIA</span><br></h4>
                 <h4 class="py-3 px-3 shadow font-weight-light" style="background-color:  rgb(255, 255, 255); border-bottom: solid 5px rgb(136, 136, 136); border-radius: 10px;">
